--- a/lang/WdjPieceLang.txt
+++ b/lang/WdjPieceLang.txt
@@ -1,14 +1,16 @@
-WdjPiece  0.8  2019.3.28
+WdjPiece  1.1  2019.10.17
 1.注释 //之后为注释内容,注释中不能包含" "双引号
 2.保留字 include enter entfrom result resulto if while
-         piece proce funct super this index main null true false
+         piece proce newproce funct super this index main null true false
          sin cos tan asin acos atan ln strlen strind strequ stradd strsub
-         runnow runlater runapp runcode runclass wait
+         runcode runclass runapp exit
 3.保留符 + - * / ^ > < = & | ! . , " ( ) [ ] { }
 4.元素 出现在=左端的字符串,可同时指代一个片段 一个过程 一个函数 一个变量
-  片段 abc=piece{} //作为模块和容器,内部可包含别的片段 过程 函数 变量
-  过程 abc=proce{} //不返回的执行段,使用runnow{} runlater{}语句接力执行
-  函数 abc=funct(){} //会返回的执行段,被调用执行
+  片段 abc=piece{} //作为容器和模块,内部可包含别的片段 过程 函数 变量
+  过程 abc=proce(条件){} //条件成熟便自发执行的代码段,没有返回值
+       abc=newproce(条件){} //条件成熟便在新线程中自发执行的代码段,没有返回值
+       //一个过程的执行可能为另一过程创造了执行条件,但过程间不应有循环依赖关系
+  函数 abc=funct(参数){} //被调用执行的代码段,需要有返回值
        //调用abc()时,函数中使用this=XXX语句返回,仅返回变量的值
        //调用abc().out时,函数中使用this.out=XXX语句返回,可返回完整的元素
   变量 abc=布值 数值 字符串值 //一个变量可同时包含三种类型的值
@@ -17,21 +19,20 @@ WdjPiece  0.8  2019.3.28
   输入输出语句 enter{注释及含待赋值变量的代码段}  entfrom(文件名){变量1 变量2...}
               result{变量1 变量2...}  resulto(文件名){变量1 变量2...}
   流程控制语句 if(条件算式){执行语句}  while(条件算式){循环语句}
-  过程控制语句 runnow{过程1 过程2...}  //把要执行的过程放到执行队列首部
-  过程控制语句 runlater{过程1 过程2...}  //把要执行的过程放到执行队列尾部
 6.等式语句
   元素=布值 数值 字符串值 //作为变量直接赋值
   元素1=元素2 //将元素2指代和包含的片段 过程 函数 变量,均赋给元素1
   元素=算式 //作为变量赋值计算结果(某一个类型的值),算式中可包含各种运算和函数
+  元素=null //删除这个元素
 7.函数
   数学函数 sin() cos() tan() asin() acos() atan() ln()
   字符串函数 strlen(str)长度 strind(str1,str2)位置 strequ(str1,str2)比较
             stradd(str1,str2)相连 strsub(str,begin,end)提取
   元素访问函数 index() //数值和字符串值均可作为参数
-  外部程序调用函数 runapp(cmd) //参照java.lang.Runtime.exec(cmd)
   代码执行函数 runcode(str) //执行存于变量中的代码段
-  类加载并执行函数 runclass(jarfile,classname,BLOCKorNO) //执行java类中的main函数
-  等待函数 wait(time) //参照java.lang.Thread.sleep(time)
+  类加载并执行函数 runclass(jarfile,classname) //执行java类中的main函数
+  外部程序调用函数 runapp(cmd) //参照java.lang.Runtime.exec(cmd)
+  程序出口函数 exit() //参照java.lang.System.exit(0)
 8.运算
   数学运算 + - * / ^
   比较运算 > < == >= <=
@@ -39,9 +40,9 @@ WdjPiece  0.8  2019.3.28
 9.特殊
   .片段层次的访问 ,函数参数的分隔 ""变量赋值字符串时使用
   super指代上层元素 this指代当前元素 index()使用参数指代下层元素
-  main=proce{}程序的入口过程
+  main=proce(true){}程序的入口过程 //仅执行一次
 10.代码结构
   源码文件中包含:代码引入语句 片段定义 过程定义 函数定义 等式语句
   片段piece中包含:片段定义 过程定义 函数定义 等式语句
-  过程proce中包含:输入输出语句 流程控制语句 过程控制语句 等式语句
+  过程proce中包含:输入输出语句 流程控制语句 等式语句
   函数funct中包含:输入输出语句 流程控制语句 等式语句
